tests/snapshots/tests__full_moon_test_suite@multi-line-comments-7.lua.snap
---
source: tests/tests.rs
expression: format(&contents)
---
--[=[ μέλλον ]=]

-- some text here

