tests/snapshots/tests__full_moon_test_suite@multi-line-comments-8.lua.snap
---
source: tests/tests.rs
expression: format(&contents)
---
--[[👨🏾‍💻]]
local more_code = here

