tests/snapshots/tests__full_moon_test_suite@multi-line-string-1.lua.snap
---
source: tests/tests.rs
expression: format(&contents)

---
local x = [[Full Moon
is a
lossless
Lua parser]]

