tests/snapshots/tests__full_moon_test_suite@multi-line-string-2.lua.snap
---
source: tests/tests.rs
expression: format(&contents)

---
local x = [=[This is
several equal
signs]=]

