tests/snapshots/tests__full_moon_test_suite@multi-line-string-3.lua.snap
---
source: tests/tests.rs
expression: format(&contents)

---
local x = [[
local emotes = {
	[":thinking:"] = "http://www.roblox.com/asset/?id=643340245",
	[":bug:"] = "http://www.roblox.com/asset/?id=860037275"
}
]]

