tests/snapshots/tests__full_moon_test_suite@multi-line-string-5.lua.snap
---
source: tests/tests.rs
expression: format(&contents)

---
local emoji = [[🧓🏽]]
local more_code = here

