tests/snapshots/tests__full_moon_test_suite@multi-line-string-8.lua.snap
---
source: tests/tests.rs
expression: format(&contents)
---
local x = [=[\v<((do|load)file|require)\s*\(?['"]\zs[^'"]+\ze['"]]=]

