tests/snapshots/tests__full_moon_test_suite@numeric-for-loop.lua.snap
---
source: tests/tests.rs
expression: format(&contents)
---
for index = 1, 10 do
	call(index)
end
for _ = start, final do
end
for _ = 1, 10, 2 do
end

