tests/snapshots/tests__full_moon_test_suite@return-break.lua.snap
---
source: tests/tests.rs
expression: format(&contents)
---
do
	return 1
end

do
	break
end

return call()

